--- a/geostats/src/main/res/values/cities.xml
+++ b/geostats/src/main/res/values/cities.xml
@@ -102,7 +102,8 @@
 	<string name="Newcastle">Newcastle</string>
 	<string name="CentralCoast">Central Coast</string>
 	<string name="Wollongong">Wollongong</string>
-	
+	<string name="Medellin">Medellín</string>
+
 	<string name="TokyoYokohama">Tokyo-Yokohama</string>
 	<string name="JakartaJabotabek">Jakarta (Jabotabek)</string>
 	<string name="Jakarta">Jakarta</string>
