--- a/geostats/src/main/res/values/years.xml
+++ b/geostats/src/main/res/values/years.xml
@@ -7,6 +7,7 @@
     <string name="Year2009">2009</string>
     <string name="Year2012">2012</string>
     <string name="Year2013">2013</string>
+	<string name="Year2014">2014</string>
 	<string name="Year2004">2004</string>
 	<string name="Year2010">2010</string>
 	<string name="Year1927">1927</string>
